# Bachelor-Thesis-Pathtracer

./: .gitmodules  CMakeLists.txt  Makefile  cornel.mtl  readme.md  test.mtl
showcase/: convert-csv.py  cornel.mtl  data.csv  data_lucy.csv  imgui.ini  jetmap.py  parameteres_cornel.ods  test.py  visualize.py
showcase/objects/: cornel.mtl  cornel2.mtl  imgui.ini  lucy.mtl  scene.mtl  test.mtl
showcase/render/: result.json  result2.json  result_compare_lucy.json  result_parameters.json
showcase/render/json-stuff/: result.json  result_parameters_lucy.json
showcase/render/synthetics/: restuls.ods  result_sb.json  result_sgVbvh.json  subbeam_results.ods
showcase/render/synthetics_jet/: result_sb.json  result_sgVbvh.json
showcase/scenes/: bistro.scene  cornel.scene  cornel_Glass.scene  hairball.scene  lucy.scene  s.scene  sponza.scene  sponza_lp.scene
showcase/scenes/synthetics/: high_c  high_d  low_c  low_d  mid_c  mid_d  (+2 more)
src/: common.cpp  common.h  main.cpp  tracer.cpp  tracer.h
src/accelerationStructures/: bvh.cpp  bvh.h  lightFieldGrid.cpp  lightFieldGrid.h  lightFieldGridSubBeams.cpp  lightFieldGridSubBeams.h
src/primitives/: cube.cpp  cube.h  object.cpp  object.h  plane.cpp  plane.h  pointLight.cpp  pointLight.h  primitive.cpp  primitive.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/scene/: SceneFile.cpp  SceneFile.h  scene.cpp  scene.h
src/shader/: shader.cpp  shader.h
src/types/: aabb.cpp  aabb.h  bvh.cpp  bvh.h  camera.cpp  camera.h  lightFieldGrid.cpp  lightFieldGrid.h  ray.cpp  ray.h  sah.cpp  sah.h  sat.cpp  sat.h  texture.cpp  texture.h  vector.cpp  vector.h
src/window/: window.cpp  window.h
tests/blender_visuals/: grid_adjust.py
tests/gjk/: asfd  index.html  tsconfig.json
tests/matrix/: mmath.py  notes.xopp  test.py
(+1 files in other folders)
